# MondoEqRef-Plugin

./: .gitignore  CMakeLists.txt  add_targets.json  build_run.ps1  midi_test.py  run_standalone.ps1
Data/: targets.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/App/: AudioNormalizer.cpp  AudioNormalizer.h  DeviceRouting.cpp  DeviceRouting.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/App/Views/: AnalyzeView.cpp  AnalyzeView.h  CustomAudioSettings.cpp  CustomAudioSettings.h  GuitarDIView.cpp  GuitarDIView.h  SpectralRefView.cpp  SpectralRefView.h  StemsView.cpp  StemsView.h
Source/SpectralRef/: MondoSpectralRefEditor.cpp  MondoSpectralRefEditor.h  MondoSpectralRefProcessor.cpp  MondoSpectralRefProcessor.h
UserDataTemplate/: device_profiles.json  ir_analizer.json  settings.json  targets.json
